--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,6 +7,12 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+/* SAJÁT STÍLUSOK*/
+
+
+
+/* SAJÁT VÉGE */
+
 :root {
   --blue: #3490dc;
   --indigo: #6574cd;
